# autonomous_mobile_manipulation

./: README.md
mobile_manipulator_tasks/: CMakeLists.txt  package.xml
mobile_manipulator_tasks/bt_xml/: go_to_object_nav.xml  main_bt.xml  test_get_gz_pose.xml  test_get_next_object.xml  test_go_to_object.xml
mobile_manipulator_tasks/include/mobile_manipulator_tasks/: object_spawner.hpp
mobile_manipulator_tasks/include/mobile_manipulator_tasks/bt_nodes/: compute_base_goal_from_object.hpp  get_gazebo_model_pose_bt_node.hpp  get_next_object_bt_node.hpp  navigate_to_pose_bt_node.hpp  pick_object_bt_node.hpp  place_object_bt_node.hpp
mobile_manipulator_tasks/launch/: bringup.launch.py
mobile_manipulator_tasks/models/: green_cylinder.sdf  red_cylinder.sdf
mobile_manipulator_tasks/msg/: SpawnedObject.msg
mobile_manipulator_tasks/src/: bt_test_runner.cpp  object_spawner.cpp  object_spawner_node.cpp
mobile_manipulator_tasks/src/bt_nodes/: compute_base_goal_from_object.cpp  get_gazebo_model_pose_bt_node.cpp  get_next_object_bt_node.cpp  navigate_to_pose_bt_node.cpp  pick_object_bt_node.cpp  place_object_bt_node.cpp
mobile_manipulator_tasks/srv/: GetNextObject.srv
panda_moveit_config/config/: panda.srdf  panda_arm_hand.srdf.xacro
sonny_description/: CMakeLists.txt  package.xml
sonny_description/config/: bridge_config.yaml  ekf.yaml  nav2_params.yaml  ros2_controllers.yaml  servo.yaml
sonny_description/launch/: display.launch.py  display_gazebo.launch.py  display_mm_gazebo.launch.py  display_mm_rviz.launch.py  sonny_gz.launch.py
sonny_description/maps/: my_world_map.pgm  my_world_map.yaml
sonny_description/meshes/: Green_Box.stl  Red_Box.stl
sonny_description/rviz/: moveit.rviz
sonny_description/src/description/: sonny.sdf  sonny.urdf  sonny_panda.sdf  sonny_panda.sdf.xacro
sonny_description/urdf/: panda_gz_amm.sdf  panda_gz_amm.urdf  panda_gz_amm.urdf.xacro  panda_mount.urdf.xacro  sonny_base.urdf.xacro  sonny_main.urdf  sonny_main.urdf.xacro
sonny_description/world/: indoor_world.sdf  my_world.sdf
