<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mobile_manipulator_tasks</name>
  <version>0.0.0</version>
  <description>Setup for mobile manipulator simulation</description>
  <maintainer email="reuben.abraham97@gmail.com">reuben</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>


  <build_depend>geometry_msgs</build_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <!-- <build_depend>rosidl_default_generators</build_depend> -->

  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>nav2_bringup</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>



  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
